# VikNGS

./: .gitignore  CMakeLists.txt  emcmake-build.sh
docs/: .readthedocs.yaml  Makefile  README.md
docs/source/: conf.py  index.rst  power_calculation.rst  source_code.rst  tests.rst
source/: index.rst  input.rst  output  output.rst  parameters.rst  power_calculation.rst  quick_start.rst  source.rst  source_code.rst  tests.rst
src/: Request.cpp  Request.h  Variant.h
src/Math/: Math.h  RandomHelper.cpp
src/Parser/: File.h  IByteSource.h  InputProcess.cpp
src/Test/: ScoreTestFunctions.cpp
src/cmd/: Log.cpp  simcmd.cpp  vikNGScmd.cpp
src/gui/src/simulation/: Simulation.cpp  Simulation.h
src/wasm/: bindings.cpp
tests/: Makefile  README.md  conftest.py  requirements.txt
tests/e2e/: _diff.py  _harness.py  cases.py  regen.py  test_cli.py  test_smoke.py
tests/e2e/golden/: common_call.pvalues.txt  common_vcf.pvalues.txt  maf_tight.pvalues.txt  missing_strict.pvalues.txt  rare_cast.pvalues.txt  rare_cast_call.pvalues.txt  rare_skat.pvalues.txt  rare_skat_call.pvalues.txt  region_filter.pvalues.txt
tests/stats/: _sim.py  test_power.py  test_sim_smoke.py  test_type1.py  test_vrvs_claim.py
tests/unit/: Makefile  test_chunksource.cpp  test_genetics.cpp  test_score.cpp  test_simulation.cpp
tests/web/: conftest.py  test_browser.py  test_browser_sim.py
web/: index.html  package-lock.json  package.json  smoke-node.cjs  smoke-sim-node.cjs  tsconfig.json  vite.config.ts
web/src/: main.ts  types.ts  worker.ts
web/src/ui/: detail.ts  form.ts  log.ts  manhattan.ts  reportViewer.js  results.ts  simForm.ts  simResults.ts  style.css
